--- a/web/app/styles/style.scss
+++ b/web/app/styles/style.scss
@@ -1,5 +1,6 @@
 $icon-font-path: "../styles/fonts/"; // Change the path to the fonts
 @import "bootstrap-sass-official/vendor/assets/stylesheets/bootstrap";
+@import "bootstrap-sass-official/vendor/assets/stylesheets/bootstrap/theme";
 
 /* Put your CSS here */
 html, body {
