--- a/web/app/templates/application.hbs
+++ b/web/app/templates/application.hbs
@@ -1,4 +1,23 @@
 <div>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">ProTrawler</a>
+        </div>
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+        	<ul class="nav navbar-nav">
+        		<li><a href="#">Metrics</a></li>
+        		<li><a href="#">Riders</a></li>
+        		<li><a href="#">Graphs</a></li>
+        		<li><a href="#">About</a></li>
+        	</ul>
+        </div>
+    </nav>
     <div class="container" id="main">
         <div class="row">
             <div>
