--- a/web/app/styles/style.scss
+++ b/web/app/styles/style.scss
@@ -6,3 +6,7 @@ $icon-font-path: "../styles/fonts/"; // Change the path to the fonts
 html, body {
     margin: 30px 0;
 }
+
+th.flagColumn {
+	width: 25px;
+}
