--- a/web/app/templates/application.hbs
+++ b/web/app/templates/application.hbs
@@ -9,12 +9,12 @@
             </button>
             <a class="navbar-brand" href="#">ProTrawler</a>
         </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <div class="collapse navbar-collapse navbar-ex1-collapse navbar-scroll-spy">
         	<ul class="nav navbar-nav">
-        		<li><a href="#">Metrics</a></li>
-        		<li><a href="#">Riders</a></li>
-        		<li><a href="#">Graphs</a></li>
-        		<li><a href="#">About</a></li>
+        		<li><a href="#metrics">Metrics</a></li>
+        		<li><a href="#riders">Riders</a></li>
+        		<li><a href="#graphs">Graphs</a></li>
+        		<li><a href="#about">About</a></li>
         	</ul>
         </div>
     </nav>
