--- a/web/app/templates/index.hbs
+++ b/web/app/templates/index.hbs
@@ -2,14 +2,14 @@
 	<div class="col-md-12">
 		<div class="jumbotron">
 			<h1>ProTrawler</h1>
-			<p>A simple website setup to trawl various sources to calculate metrics UCI ProTour cyclists.</p>
+			<p>A UCI ProTour rider stat collation tool alluding to the fact that you could never be Pro.</p>
 		</div>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col-md-12">
-		<h1>Metrics</h1>
+		<h1 id="metrics">Metrics</h1>
 	</div>
 </div>
 
@@ -58,7 +58,7 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<h1>Riders</h1>
+		<h1 id="riders">Riders</h1>
 	</div>
 </div>
 
@@ -72,13 +72,13 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<h1>Graphs</h1>
+		<h1 id="graphs">Graphs</h1>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col-md-12">
-		<h1>About</h1>
+		<h1 id="about">About</h1>
 	</div>
 </div>
 
