--- a/web/app/templates/index.hbs
+++ b/web/app/templates/index.hbs
@@ -47,7 +47,7 @@
 							<h3><span class="label label-default">Biggest Representation</span></h3>
 						</td>
 						<td>
-							<h3>{{countryRep.name}} <small><h3>{{countryRepCount}}</h3></small></h3>
+							<h3>{{countryRep.name}}&nbsp;<small>[{{countryRepCount}} riders] </small></h3>
 						</td>
 					</tr>
 				</table>
