--- a/web/app/templates/riderlist.hbs
+++ b/web/app/templates/riderlist.hbs
@@ -2,9 +2,9 @@
 	<tr>
 		<th class="flagColumn"></th>
 		<th>Name</th>
-		<th>Age</th>
-		<th>Weight</th>
-		<th>Height</th>
+		<th>{{view "sortIndicator" column="age"}}</th>
+		<th>{{view "sortIndicator" column="weight"}}</th>
+		<th>{{view "sortIndicator" column="height"}}</th>
 	</tr>
 	{{#each arrangedContent}}
 		<tr>
