--- a/web/app/templates/riderlist.hbs
+++ b/web/app/templates/riderlist.hbs
@@ -2,9 +2,9 @@
 	<tr>
 		<th class="flagColumn"></th>
 		<th>Name</th>
-		<th>{{view "sortIndicator" column="age"}}</th>
-		<th>{{view "sortIndicator" column="weight"}}</th>
-		<th>{{view "sortIndicator" column="height"}}</th>
+		<th class="dataColumn">{{view "sortIndicator" column="age"}}</th>
+		<th class="dataColumn">{{view "sortIndicator" column="weight"}}</th>
+		<th class="dataColumn">{{view "sortIndicator" column="height"}}</th>
 	</tr>
 	{{#each limitedContent}}
 		<tr>
