Fixed small typo in about section

--- a/web/app/templates/index.hbs
+++ b/web/app/templates/index.hbs
@@ -89,12 +89,12 @@
 			<p>
 				The other day I was wondering what the average weight and height of a pro cyclist was. There's a few sources
 				online but the information is sketchy and without citation. I decided I'd write a little python script which
-				would trawl Wikipedia to gather riders weights and heights, and then work out the average based on these numbers.
+				would trawl Wikipedia to gather riders' weights and heights, and then work out the average based on these numbers.
 				This seemed to work pretty well, so I thought I'd knock up a website which displayed this data. Et voilà.
 			</p>
 			<h4>How does it work?</h4>
 			<p>
-				So initially I planned on just trawling Wikipedia. This works pretty well but there's lots of incomplete
+				Initially I planned on just trawling Wikipedia. This works pretty well but there's lots of incomplete
 				rider pages - especially for younger riders. So instead, where possible, I also trawl team websites. Some teams
 				have consistent, easy to generate urls based on rider names. Others don't. If a rider doesn't have any stats,
 				they aren't shown on the list.<br/>
