Added d3 vis library. Added visualisation of country representation.

--- a/web/app/styles/style.scss
+++ b/web/app/styles/style.scss
@@ -18,3 +18,27 @@ th.flagColumn {
 th.dataColumn {
 	width: 150px;
 }
+
+/* D3 Stuff! */
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.axis {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path {
+  display: none;
+}
