--- a/web/app/templates/index.hbs
+++ b/web/app/templates/index.hbs
@@ -78,6 +78,12 @@
 
 <div class="row">
 	<div class="col-md-12">
+		{{outlet graph}}
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-12">
 		<h1 id="about">About</h1>
 	</div>
 </div>
