Added rider weight and height graphs. Needs some simplification.

--- a/web/app/styles/style.scss
+++ b/web/app/styles/style.scss
@@ -36,6 +36,11 @@ th.teamColumn {
   font: 10px sans-serif;
 }
 
+.axis-label {
+  font: 12px sans-serif;
+  font-weight: bold;
+}
+
 .axis path,
 .axis line {
   fill: none;
