Added a beta warning statement

--- a/web/app/templates/index.hbs
+++ b/web/app/templates/index.hbs
@@ -3,6 +3,7 @@
 		<div class="jumbotron">
 			<h1>ProTrawler</h1>
 			<p>A UCI ProTour rider stat collation tool alluding to the fact that you could never be Pro.</p>
+			<p>This tool is in beta!</p>
 		</div>
 	</div>
 </div>
